# prints-zpls-fulfillment

./: README.md  pyproject.toml
src/prints_zpls_fulfillment/: __init__.py
src/prints_zpls_fulfillment/app/: app.py
src/prints_zpls_fulfillment/app/ui/: input_data_screen.py  login_screen.py  main_screen.py
src/prints_zpls_fulfillment/domain/: user.py
src/prints_zpls_fulfillment/infrastructure/: __init__.py  env_user_repository.py  postgres_repository.py  zebra_printer.py
src/prints_zpls_fulfillment/interfaces/: product_repository.py  user_repository.py
src/prints_zpls_fulfillment/update_etiquetas_db/: README.md  main.py
src/prints_zpls_fulfillment/update_etiquetas_db/data/: Envio-42901219-Etiquetas-do-produtos.txt
src/prints_zpls_fulfillment/update_etiquetas_db/database/: queries.py
src/prints_zpls_fulfillment/update_etiquetas_db/db/: queries.py
src/prints_zpls_fulfillment/update_etiquetas_db/entities/: base_ean_siac.py  etiquetas.py
src/prints_zpls_fulfillment/update_etiquetas_db/repositories/: __init__.py  handler_postgres.py  i_repositorio_etiquetas.py
src/prints_zpls_fulfillment/update_etiquetas_db/use_cases/: __init__.py  gerenciar_etiquetas.py
src/prints_zpls_fulfillment/use_cases/: login_use_case.py  process_label_use_case.py
